--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^5.10.11",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
+    "react-image-file-resizer": "^0.3.8",
     "slugify": "^1.4.6"
   }
 }
