--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
     "react-image-file-resizer": "^0.3.8",
-    "slugify": "^1.4.6"
+    "slugify": "^1.4.6",
+    "stripe": "^8.129.0"
   }
 }
