--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "nodemon": "^2.0.6",
     "react-image-file-resizer": "^0.3.8",
     "slugify": "^1.4.6",
-    "stripe": "^8.129.0"
+    "stripe": "^8.129.0",
+    "uniqueid": "^1.0.0"
   }
 }
